--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "description": "",
   "dependencies": {
     "@e965/xlsx": "^0.20.3",
+    "@supabase/supabase-js": "^2.47.16",
     "basic-ftp": "^5.0.5",
     "csv-parser": "^3.1.0",
+    "dotenv": "^16.4.7",
     "fs-extra": "^11.2.0",
     "xml2js": "^0.6.2"
   },
