--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "csv-parser": "^3.1.0",
     "dotenv": "^16.4.7",
     "fs-extra": "^11.2.0",
+    "uuid": "^11.0.5",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
